// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments renders default 1`] = `""`;

exports[`Comments renders listing one 1`] = `
<div
  className="Comments"
>
  <Connect(Comment)
    id="foo"
    key="foo"
  />
</div>
`;

exports[`Comments renders listing two 1`] = `
<div
  className="Comments"
>
  <Connect(Comment)
    id="foo"
    key="foo"
  />
  <Connect(Comment)
    id="bar"
    key="bar"
  />
</div>
`;
